docs: correct twenty-one claims a review found wrong in AGENTS.md
Verified against the code rather than inherited from the file this was
extracted from, which had drifted for a long time. The corrections that
would have cost a newcomer the most:

Methods that do not exist. mapBean, fromBean, a single-argument map(Class)
builder, .rename(Accessor, Accessor), a .field(String) overload, and the
whole auto() paragraph describe an API that never shipped. Same-name
backfill is the default rather than a row, the varargs type is MapStep
rather than Mapping, and the fluent alternative is mapperBuilder.

The capacity rule inverted at exactly the case it guards. "Passes three
quarters of the next power of two" predicts that sixteen elements do not
resize a table sized for sixteen; they do, because the rounding is
inclusive. Now stated as the smallest power of two at least as large,
with the non-monotonic band called out — and the example in the writing
conventions, which repeated the same wrong phrasing, corrected with it.

The Markdown convention fought the build. Spotless runs prettier with
proseWrap always over every .md file, so "one line per paragraph" would
have had a contributor's first spotlessApply reflow their work and
spotlessCheck fail it. That rule is right for PR and issue bodies, where
GitHub turns a single newline into a line break, and wrong for files.

The reflection-versus-MethodHandles section contradicted mantra two and
itself: Lookup.unreflect is the MethodHandles API, and both MhIso and
MhAccessors are MethodHandle machinery. Reframed as ADR-0003 being
history and ADR-0005 the live decision.

Round-deferred Lombok emission is stale for the processor it is named
after: LombokFocusProcessor now emits eagerly every round and drains at
processingOver, because deferring meant its output did not exist when
same-module main code resolved. BridgeProcessor and FromMapProcessor
defer per target.

Multi-edit fusion shipped; it was described as an open extension thr